kubernetes/apps/networking/traefik/traefik.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    #cert-manager.io/cluster-issuer: "ca-issuer"
    hajimari.io/appName: "traefik"
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: networking-chain-authelia@kubernetescrd
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - &host "traefik.${SECRET_DEV_DOMAIN}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: traefik-dashboard
#  namespace: networking
#spec:
#  entryPoints:
#    - web
#    - websecure
#  routes:
#    - match: Host(`traefik.${SECRET_DEV_DOMAIN}`) 
#      kind: Rule
#      middlewares:
#        - name: middlewares-basic-auth
#          namespace: networking
#      services:
#        - name: api@internal
#          kind: TraefikService
#---
